un poco de estilo, eliminacion de alerts

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <tbody class="accesory">
         </tbody>
     </table>
+    <div class="total"></div>
     <footer>
         <p style="color:#000; font-weight: 600;"> <b>Copyright</b> <b>&copy</b>
         </p>
