--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tunning - Sim</title>
     <script src="http://kit.fontawesome.com/df59baf6b8.js" crossorigin="anonymous"></script>
-
     <link rel="preconnect" href="http:/fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <script defer src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script defer type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script defer src="modal.js"></script>
     <script defer src="app.js"></script>
 </head>
@@ -26,7 +27,7 @@
         <div id="welcomemodal" class="welcomemodal">
             <label for="initialHp" class="form-label input-modal">Standard hp?</label>
             <input id="initialHp" type="text " name="initialHp" class="input-modal" required value="Set your hp">
-            <button id="close-modal" class="btn btn-outline-info btn-modal">Power-up Simulator App</button>
+            <button id="close-modal" class="btn btn-outline-info btn-modal">Tuning Calculator</button>
         </div>
     </div>
 
@@ -53,7 +54,7 @@
             <button id="emptyCart" class="clear-all">CLEAR</button>
         </div>
     </div>
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    
 </body>
 
 </html>
